# minirouter

./: README.md
bootloader/: Cargo.toml  bochsrc  boot.asm  bootloader_output.txt  main.rs  run-qemu.sh
bootloader/.cargo/: config.toml
bootloader/esp/efi/boot/: bootx64.efi
bootloader/src/: cfg_table_type.rs  identify_acpi_handler.rs  kernel_args.rs  main.rs  serial_output.rs
kernel/: cargo.toml  x86_64-blog_os.json  x86_64-kernel.json
kernel/.cargo/: config.toml
kernel/interrupt/: structures.rs
kernel/iso/EFI/BOOT/: BOOTX64.EFI
kernel/src/: main.rs
kernel/src/interrupt/: interrupt.rs  structures.rs
kernel/src/modules/: uefi.rs
