[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = "5.1.0"
log = "0.4.25"
uefi = { version = "0.33.0", features = ["logger", "panic_handler"] }
uefi-raw = "0.9.0"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[toolchain]
targets = ["x86_64-unknown-uefi"]

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]
