[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.26"
uefi = { version = "0.34.1", features = ["panic_handler", "logger", "alloc"] }
x86_64 = "0.15.2"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "alloc", "compiler_builtins"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
